# zmg-utils

./: CMakeLists.txt  README.md  makezmg.c  zmgfs.c  zmgfs.h  zmgmnt.c  zmgsh.c
